--- a/Styles/CommonADGroups.css
+++ b/Styles/CommonADGroups.css
@@ -1,6 +1,4 @@
-body {
-  font-family: roboto;
-}
+
 
 #ad-groups {
   display: flex;
@@ -76,4 +74,14 @@ button:hover {
   outline: none;
   background-color: rgba(255,255,255,0.1);
   border: 2px solid rgba(13, 110, 253, 1);
+}
+
+.ad-groups{
+  margin: 10px;
+  padding: 10px;
+}
+
+.ad-groups:hover {
+  margin: 10px;
+  padding: 10px;
 }
