--- a/Styles/SystemSummary.css
+++ b/Styles/SystemSummary.css
@@ -1,4 +1,84 @@
-/* Dustin, please remove this before you start working */
-body {
+/* Dustin, please remove this before you start working - This is now staying forever */
+/* Moved to global css */
+
+
+html {
+    scroll-padding-top: 150px;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    box-sizing: border-box;
+
+}
+
+#content {
+    width: 100vw;
+}
+
+#markers {
+    display: flex;
+    gap: 15px;
+    align-self: center;
+}
+
+#markers a{
     color: white;
+}
+
+ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+ul li{
+    margin: 0px;
+    padding: 0px;
+    transition: .5s ease-in-out;
+
+}
+
+ul li a:hover{
+    color: rgba(13, 110, 253, 1);
+    text-decoration: underline;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100vw;
+}
+
+section ul {
+    display: none;
+    justify-self: flex-start;
+    flex-wrap: wrap;
+    text-align: center;
+    gap: 50px;
+    color: white;
+    text-decoration: none;
+    margin: 0px;
+    padding: 10px;
+    list-style-type: none;
+}
+
+
+section button {
+    position: relative;
+    border: none;
+    padding: 10px;
+    background-color: transparent;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+
+hr {
+    margin-top: 3px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
