--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -1,11 +1,12 @@
 nav {
   position: fixed;
-  display: flex;
+  display: inline-grid;
+  grid-template-columns: 20% 60% 20%;
   color: white;
-  justify-content: space-between;
-  box-sizing: border-box;
   align-items: center;
-  padding: 10px;
+  box-sizing: border-box;
+
+  padding: 0px 10px;
   z-index: 100;
   width: 100%;
   top: 0px;
@@ -19,15 +20,20 @@ nav {
 }
 
 nav img{
+  grid-column-start: 1;
+  grid-column-end: 2;
   height: 20px;
   width: 20px;
   margin-bottom: -4px;
 }
 
 nav input {
+  justify-self:flex-end;
+  grid-column-start: 3;
+  grid-column-end: 4;
   border: 2px solid rgba(255, 255, 255, 0.5);
   box-sizing: border-box;
-  width: 300px;
+  width: 100%;
   height: 40px;
   font-size: 16px;
   border-radius: 10px;
@@ -49,12 +55,16 @@ input::placeholder {
 nav #other-links {
   display: flex;
   gap: 50px;
+  grid-column-start: 2;
+  grid-column-end: 3;
   width: fit-content;
+  justify-self: center;
 }
 
 nav a {
   color: white;
   text-decoration: none;
+  justify-self: flex-start;
 }
 
 nav form {
