--- a/Styles/HDBookmarks3.0.css
+++ b/Styles/HDBookmarks3.0.css
@@ -1,5 +1,3 @@
-
-
 .page {
   width: 100%;
   height: 100%;
@@ -7,27 +5,28 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 10px;
+  box-sizing: border-box;
 }
 
 .information {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
   width: 100%;
   color: white;
 }
 
-.information div {
+.page #Bugs {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   gap: 20px;
   width: 100%;
 }
 
-.information a {
+.page #Bugs a {
   padding: 15px;
   box-sizing: border-box;
   text-align: center;
@@ -35,10 +34,9 @@
   background: rgba(255, 255, 255, 0.1);
 }
 
-.information p {
-  padding: 10px;
+.page #Bugs p {
   border-radius: 5px;
-  margin-top: -5px;
+  margin-bottom: -5px;
 }
 
 
@@ -54,11 +52,15 @@ a {
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  height: 100%;
-  margin-top: 30px;
-  gap: 30px;
+  height: 100vh;
+  padding-left: 310px;
+  gap: 20px;
+  padding-top: 20px;
+  padding-bottom: 70px;
   flex-wrap: wrap;
   color: white;
+  box-sizing: border-box;
+  overflow-y: scroll;
 }
 
 .links .link{
@@ -66,6 +68,7 @@ a {
   text-align: center;
   text-wrap: wrap;
   max-width: 20%;
+  min-width: 200px;
   padding: 5px 20px;
   border-radius: 20px;
   cursor: default;
@@ -115,8 +118,7 @@ a {
   font-size: 18px;
   padding: 20px;
   border-radius: 10px;
-  min-width: 20%;
-  max-height: fit-content;
+  width: 100%;
   align-self: center;
 
 }
@@ -141,14 +143,21 @@ a {
 
 
 .copy-buttons {
-  width: 90%;
-  height: fit-content;
-  gap: 30px;
+  width: 300px;
+  position: fixed;
+  top: 70px;
+  left: 0px;
+  height: 100vh;
+  gap: 20px;
   display: flex;
-  justify-content: space-evenly;
-  overflow-x: scroll;
+  flex-direction: column;
+  overflow: auto;
   scrollbar-width: none;
   padding: 5px;
+  box-sizing: border-box;
+  padding-bottom: 100px;
+  z-index: 10;
+
 }
 
 .copy-buttons::-webkit-scrollbar {
