--- a/Styles/SystemSummary.css
+++ b/Styles/SystemSummary.css
@@ -4,6 +4,7 @@
 
 html {
     scroll-padding-top: 150px;
+    overflow: scroll !important;
 }
 
 body{
@@ -12,7 +13,6 @@ body{
     align-items: center;
     width: 100vw;
     box-sizing: border-box;
-
 }
 
 #content {
